static/css/index.css
.mobile_menu {
  -webkit-transition: all 1s ease-in-out;
  transition: all 1s ease-in-out;
}

.nav_collapse {
  max-height: 0;
}

.nav_show {
  max-height: 20rem;
}

#loader-wrapper {
    position: absolute;
    top: 50%;
    left: 50%;
    -moz-transform: translateX(-50%) translateY(-50%);
    -webkit-transform: translateX(-50%) translateY(-50%);
    transform: translateX(-50%) translateY(-50%);
}

.py-4 {
    padding-top: 1rem !important;
    padding-bottom: 1rem !important;
}

#ios-alert svg {
    display: none;
    border-radius: 0px 0px 3px 3px !important;
    background-color: #fff457 !important;
}

html {
    zoom: 100%;
}

@media(min-width: 800px) {
    html {
        zoom: 75%;
    }

    #ios-alert svg {
        display: flex;
    }
}

